<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeminoleTix</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Welcome to SeminoleTix</string>
    <string name="title_activity_register">Register an Account</string>
    <string name="cardHint">FSU Card Number</string>
    <string name="pinHint">PIN</string>
    <string name="emailHint">Email</string>
    <string name="passHint">Password</string>
    <string name="repassHint">Confirm Password</string>
    <string name="signinButtonText">Sign In</string>
    <string name="registerButtonText">Register</string>
    <string name="title_activity_list">List of Games</string>
    <string name="clearButton">Clear Form</string>
    <string name="submitButton">Submit Form</string>
    <string name="EmailPrompt">Email</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="action_settings">Settings</string>
    <string name="Error_NoConnection">An Internet connection is required for this
        application to operate properly</string>
    <string name="title_activity_show_games_list">Display of Reserved Tickets</string>
    <string name="hello_world">Hello world!</string>

</resources>